px4_ws/logs/px4_offboard/build.make.150.log.stderr
In file included from /home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/SLAM.cpp:3:0:
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp: In member function 'bool CtrlPx4::commandUpdate()':
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp:94:29: error: 'yaw_old' was not declared in this scope
   yaw_cali_value =  (yaw_new-yaw_old)/(ros::Time::now().toSec() - secs);
                             ^
make[2]: *** [CMakeFiles/SLAM.dir/src/SLAM.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
